# metac-bot-template

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: run_bot_on_quarterly_cup.yaml  run_bot_on_tournament.yaml
metac_bot_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
